# lunchtoast

./: CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  lgtm.yml  vcpkg.json
.github/workflows/: build_and_test.yml  release.yml
examples/: readme.toast
functional_tests/: linux_vars.shoal  windows_vars.shoal
functional_tests/actions/: actions.cfg  test.toast
functional_tests/actions_check_error_output/: actions.cfg  test.toast
functional_tests/actions_check_error_output_failed/: report.ref  test.toast
functional_tests/actions_check_exit_code/: actions.cfg  test.toast
functional_tests/actions_check_exit_code_failed/: report.ref  test.toast
functional_tests/actions_check_exit_code_ignored/: actions.cfg  report.ref  test.toast
functional_tests/actions_check_output/: actions.cfg
functional_tests/actions_check_output_failed/: report.ref  test.toast
functional_tests/actions_config_file/: test.toast
functional_tests/actions_config_file_parent_dir/: test.toast
functional_tests/actions_config_files_merge/: test.toast
functional_tests/actions_dont_stop_on_failure/: actions.cfg  report.ref  test.toast
functional_tests/actions_multiple_params/: actions.cfg  test.toast
functional_tests/actions_sections/: actions.cfg  test.toast
functional_tests/assert_failed/: report.ref  test.toast
functional_tests/assert_passed/: test.toast
functional_tests/collect_failed/: failed_tests_dir.ref  report.ref  test.toast
functional_tests/collect_failed_windows/: failed_tests_dir.ref  report.ref  test.toast
functional_tests/commandline_error_empty/: report.ref  test.toast
functional_tests/commandline_error_unexistent_file/: report.ref  test.toast
functional_tests/commandline_ext/: test.toast
functional_tests/commandline_help/: report.ref  test.toast
functional_tests/commandline_preserve_current_state/: report.ref  test.toast
functional_tests/commandline_preserve_current_state_update/: lunchtoast.test  report.ref  test.toast
functional_tests/commandline_report_width/: report.ref  test.toast
functional_tests/commandline_save_contents/: lunchtoast_test.ref  report.ref  test.toast
functional_tests/commandline_save_contents_update/: lunchtoast.test  lunchtoast_test.ref  report.ref  test.toast
functional_tests/commandline_save_state/: lunchtoast.test  report.ref  test.toast
functional_tests/commandline_save_state_update/: lunchtoast_test.ref  report.ref  test.toast
functional_tests/compare_data_files_failed/: report.ref  test.toast
functional_tests/compare_data_files_failed_windows/: report.ref  test.toast
functional_tests/compare_files_regexp_error/: report.ref  test.toast
functional_tests/compare_files_regexp_failed/: report.ref  test.toast
functional_tests/compare_files_regexp_passed/: test.toast
functional_tests/compare_outside_text_files_passed/: report.ref  test.toast
functional_tests/compare_text_files_passed/: test.toast
functional_tests/content_of_file_error_missing_file/: report.ref  test.toast
functional_tests/content_of_file_failed/: report.ref  test.toast
functional_tests/content_of_file_passed/: test.toast
functional_tests/expect_error_exit_code_passed/: test.toast
functional_tests/expect_error_exit_code_passed_windows/: test.toast
functional_tests/expect_error_output_failed/: report.ref  test.toast
functional_tests/expect_error_output_failed_windows/: test.toast
functional_tests/expect_error_output_passed/: test.toast
functional_tests/expect_error_output_passed_windows/: test.toast
functional_tests/expect_exit_code_failed/: report.ref  test.toast
functional_tests/expect_exit_code_failed_windows/: test.toast
functional_tests/expect_exit_code_passed/: test.toast
functional_tests/expect_exit_code_passed_windows/: test.toast
functional_tests/expect_failed/: report.ref  test.toast
functional_tests/expect_output_failed/: report.ref  test.toast
functional_tests/expect_output_failed_windows/: test.toast
functional_tests/expect_output_passed/: test.toast
functional_tests/expect_output_passed_windows/: test.toast
functional_tests/expect_passed/: test.toast
functional_tests/launch_command_detached/: test.toast
functional_tests/launch_command_failed/: report.ref  test.toast
functional_tests/launch_command_failed_windows/: report.ref  test.toast
functional_tests/launch_command_ignoring_output/: test.toast
functional_tests/launch_command_passed/: test.toast
functional_tests/launch_command_passed_windows/: test.toast
functional_tests/launch_process_failed/: report.ref  test.toast
functional_tests/launch_process_failed_windows/: report.ref  test.toast
functional_tests/launch_process_passed/: test.toast
functional_tests/launch_process_passed_windows/: test.toast
functional_tests/launch_unchecked_command/: test.toast
functional_tests/launch_unchecked_command_windows/: test.toast
functional_tests/launch_unchecked_process/: test.toast
functional_tests/launch_unchecked_process_windows/: test.toast
functional_tests/launch_unexistent_process_error/: report.ref  test.toast
functional_tests/list_failed/: failed_tests.ref  report.ref  test.toast
functional_tests/list_failed_windows/: failed_tests.ref  test.toast
src/: alias_boost_filesystem.h  alias_boost_process.h  alias_boost_program_options.h  alias_filesystem.h  cleanupwhitelistgenerator.cpp  cleanupwhitelistgenerator.h  commandline.h  compareerroroutput.cpp  compareerroroutput.h  compareexitcode.cpp  compareexitcode.h  comparefilecontent.cpp  comparefilecontent.h  comparefiles.cpp  comparefiles.h  compareoutput.cpp  compareoutput.h  config.h  constants.h  errors.h  filenamegroup.cpp  filenamegroup.h  filenamereader.cpp  filenamereader.h  filenamesreader.cpp  filenamesreader.h  itestaction.h  launchprocess.cpp  launchprocess.h  launchprocessresult.h  linestream.cpp  linestream.h  main.cpp  processresultcheckmode.h  section.h  sectionsreader.cpp  sectionsreader.h  string_utils.cpp  string_utils.h  test.cpp  (+27 more)
tests/: CMakeLists.txt  assert_exception.h  test_sectionsreader.cpp  test_useractionformatparser.cpp  test_utils.cpp
(+166 files in other folders)
